--- a/priv/rules/horror_thriller.yml
+++ b/priv/rules/horror_thriller.yml
@@ -12,6 +12,7 @@
     text_ru: Практически всё в этом мире умирает. В этом мире жизнь — всего лишь незначительная частичка, не более чем секундное явление. Смерть повсеместна.
     image: http://i.imgur.com/NEaqM1P.png?1
     border_color: "#ddc49c"
+    topic_id: 227420
 
 - <<: *defaults
   level: 2
