--- a/priv/rules/onniichan.yml
+++ b/priv/rules/onniichan.yml
@@ -32,3 +32,4 @@
     text_ru: Вы знаете как счастливо жить с сестрёнкой вечно.
     image: http://i.imgur.com/BQDF1Dq.png
     border_color: "#f0d698"
+    topic_id: 227425
