--- a/priv/rules/sovietanime.yml
+++ b/priv/rules/sovietanime.yml
@@ -228,3 +228,4 @@
     text_en: From Russia with love <3
     image: http://i.imgur.com/Edt5PrL.png
     border_color: "#daa520"
+    topic_id: 227427
