--- a/priv/rules/yandere.yml
+++ b/priv/rules/yandere.yml
@@ -69,6 +69,7 @@
     text_en: When you look into the abyss, the abyss stares back at you.
     image: https://lh3.googleusercontent.com/5GlJJYYzodzjTuR5IiDN9Fj2KR_X-CYZtTEqPN6iUHAOHfKr3QvI_jElrRwEg7rNR-Jctcvq89-jliPlLA8sI7ZNHAOWZp3EEZhQcDmogawgqs9mIklOkHUxDQ89MbyN-nEYU9rGwtTa63p0og
     border_color: "#821d60"
+    topic_id: 227431
 
 - <<: *defaults
   level: 2
