--- a/priv/rules/scifi.yml
+++ b/priv/rules/scifi.yml
@@ -11,6 +11,7 @@
     text_ru: Как только ты сделаешь первый шаг по Тёмному Пути, ты уже не сможешь с него свернуть.
     image: http://unrealitymag.com/wp-content/uploads/2014/04/dandy-title-500x250.jpg
     border_color: "#923a6c"
+    topic_id: 222059
 
 - <<: *defaults
   level: 2
