--- a/priv/rules/fujoshi.yml
+++ b/priv/rules/fujoshi.yml
@@ -38,5 +38,5 @@
   metadata:
     title_ru: Яойный бог
     text_ru: Яой - не жанр. Яой — это стиль жизни.
-    image: http://nyaa.shikimori.org/images/user_image/original/22828/107095.jpg
+    image: https://shikimori.org/assets/achievements/anime/fujoshi_3.jpg
     border_color: "#e82a8d"
