--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -9,12 +9,8 @@
   metadata:
     title_ru: Пилот Евы
     text_ru: ОЯШ, залезай в робота
-    image:
-      - http://i.imgur.com/dd0fC8Z.png
-      - http://68.media.tumblr.com/8cf1278fd22114a55608e9b09a5db1b4/tumblr_inline_nczxqyUFjI1rywm8k.png
-    border_color:
-      - "#ffffff"
-      - "#1a153f"
+    image: http://68.media.tumblr.com/8cf1278fd22114a55608e9b09a5db1b4/tumblr_inline_nczxqyUFjI1rywm8k.png
+    border_color: "#1a153f"
     topic_id: 222036
 
 - <<: *defaults
@@ -43,9 +39,5 @@
     text_ru: |-
       Мы снесем любую стену вставшую на пути! Если нет пути ,мы его проложим!
       Магма течет в наших венах, раскаляя сердца!
-    image:
-      - http://i.imgur.com/YTDucCf.gif
-      - http://i.imgur.com/poc59of.png
-    border_color:
-      - "#da4968"
-      - "#ff000f"
+    image: http://i.imgur.com/YTDucCf.gif
+    border_color: "#da4968"
