--- a/priv/rules/military.yml
+++ b/priv/rules/military.yml
@@ -39,5 +39,5 @@
     text_ru: |-
       Не стоит связываться с кадровым офицером, прошедшим горячие точки.
       Жизни тысяч в руках одного.
-    image: http://i7.5cm.ru/i/nzrc.gif
+    image: https://shikimori.org/assets/achievements/anime/military_4.gif
     border_color: "#2a456e"
