--- a/priv/rules/onniichan.yml
+++ b/priv/rules/onniichan.yml
@@ -29,7 +29,7 @@
       - 9587
   metadata:
     title_ru: Братик
-    text_ru: Вы знаете как счастливо жить с сестрёнкой вечно.
+    text_ru: Вы знаете, как счастливо жить с сестрёнкой вечно.
     image: http://i.imgur.com/BQDF1Dq.png
     border_color: "#f0d698"
     topic_id: 227425
