--- a/priv/rules/dementia_psychological.yml
+++ b/priv/rules/dementia_psychological.yml
@@ -20,12 +20,8 @@
   metadata:
     title_ru: Это вообще реально?
     text_ru: Стало трудно отличить реальность и вымысел. Ориентация в пространстве нарушена.
-    image:
-      - http://s5.postimg.org/5i9mqo1uf/Psiho_7_00000.jpg
-      - http://s5.postimg.org/4dfklafdj/Psiho_2_00000.jpg
-    border_color:
-      - "#000000"
-      - "#000000"
+    image: http://s5.postimg.org/5i9mqo1uf/Psiho_7_00000.jpg
+    border_color: "#000000"
 
 - <<: *defaults
   level: 3
@@ -42,9 +38,5 @@
   metadata:
     title_ru: Вы видели слишком много.
     text_ru: Вы превзошли человечество и находитесь совсем на другом уровне.
-    image:
-      - http://media.giphy.com/media/3oEduMSfJQyPqvgZxu/giphy.gif
-      - http://i.imgur.com/iOrSsYl.gif
-    border_color:
-      - "#4169E1"
-      - "#20B2AA"
+    image: http://i.imgur.com/iOrSsYl.gif
+    border_color: "#20B2AA"
