--- a/priv/rules/moe.yml
+++ b/priv/rules/moe.yml
@@ -196,7 +196,7 @@
   metadata:
     title_ru: Лучи кавая
     text_ru: Поражают в самое сердце.
-    image: http://i.imgur.com/ao63S07.png
+    image: https://31.media.tumblr.com/9f3d1511d5e0025416ca04e5b55ee3fd/tumblr_n6rv1333lw1swb4xxo4_500.gif
     border_color: "#fdbdba"
 
 - <<: *defaults
