--- a/priv/rules/yandere.yml
+++ b/priv/rules/yandere.yml
@@ -88,3 +88,5 @@
     title_ru: Безумие
     text_ru: Умри, пожалуйста!
     title_en: Insanity
+    image: http://31.media.tumblr.com/tumblr_mdfamrgrfH1rshzuyo1_500.gif
+    border_color: "#2F2E2D"
