updates for mahou shoujo

--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -3,7 +3,7 @@
   neko_id: mahou_shoujo
   level: 1
   algo: simple
-  threshold: 20
+  threshold: 20%
   filters:
     anime_ids:
       - 100
@@ -22,7 +22,6 @@
       - 10519
       - 10520
       - 10549
-      - 1066
       - 10710
       - 10736
       - 10739
@@ -80,14 +79,12 @@
       - 14829
       - 1489
       - 14947
-      - 14957
       - 1502
       - 1503
       - 1509
       - 151
       - 1514
       - 15307
-      - 1531
       - 1533
       - 1534
       - 15407
@@ -118,7 +115,6 @@
       - 17357
       - 1744
       - 17497
-      - 17551
       - 17651
       - 17681
       - 17719
@@ -132,7 +128,6 @@
       - 18047
       - 1807
       - 1808
-      - 1815
       - 1841
       - 1853
       - 1855
@@ -180,7 +175,6 @@
       - 20843
       - 20913
       - 21031
-      - 21085
       - 21407
       - 21421
       - 21573
@@ -246,12 +240,10 @@
       - 27613
       - 27629
       - 27727
-      - 2787
       - 27997
       - 2804
       - 2834
       - 28511
-      - 28603
       - 28669
       - 28885
       - 2923
@@ -292,7 +284,6 @@
       - 32153
       - 32160
       - 32202
-      - 3221
       - 3222
       - 3223
       - 32256
@@ -324,6 +315,7 @@
       - 3388
       - 34290
       - 34302
+      - 34834
       - 349
       - 350
       - 351
@@ -331,7 +323,6 @@
       - 3526
       - 353
       - 354
-      - 355
       - 3573
       - 3577
       - 3615
@@ -353,7 +344,6 @@
       - 3863
       - 3875
       - 3881
-      - 3956
       - 3991
       - 4003
       - 4017
@@ -423,18 +413,15 @@
       - 630
       - 6311
       - 6318
-      - 6330
       - 6381
       - 64
       - 6492
       - 6496
       - 65
       - 6527
-      - 6572
       - 660
       - 673
       - 6748
-      - 6773
       - 678
       - 681
       - 682
@@ -451,7 +438,6 @@
       - 721
       - 7294
       - 7333
-      - 7375
       - 74
       - 740
       - 7427
@@ -519,7 +505,7 @@
 
 - <<: *defaults
   level: 2
-  threshold: 35
+  threshold: 35%
   metadata:
     title_ru: Магия - второе имя
     text_ru: Не важно, каков ваш пол, вы можете превращаться в девушку с двумя хвостиками и нести возмездие во имя луны.
@@ -528,16 +514,16 @@
 
 - <<: *defaults
   level: 3
-  threshold: 55
+  threshold: 55%
   metadata:
     title_ru: Все враги побеждены
     text_ru: Опасность миновала, жителям Волшебной страны остаётся только жить-поживать да добра наживать.
     image: https://pa1.narvii.com/6578/3311238ad7ec1b88296a003d615d1f6ebf635717_hq.gif
     border_color: "#FFD6DB"
-    
+
 - <<: *defaults
   level: 4
-  threshold: 85
+  threshold: 80%
   metadata:
     title_ru: Настоящее волшебство?
     text_ru: Вашим силам теперь подвластно само мироздание.
