--- a/priv/rules/sports.yml
+++ b/priv/rules/sports.yml
@@ -20,7 +20,7 @@
     title_ru: С головой ушел в игру
     text_ru: Борьба в самом разгаре, пора войти в Зону.
     image: http://s5.postimg.org/6rypxlxsn/basketball_5.jpg
-    border_color: "#ff0000"
+    border_color: "#cc1111"
 
 - <<: *defaults
   level: 3
@@ -29,7 +29,7 @@
     title_ru: Добро пожаловать в Высшую лигу
     text_ru: Остался последний рывок до победы.
     image: http://s5.postimg.org/ljtse380n/image.jpg
-    border_color: "#dfe2e7"
+    border_color: "#82c54f"
 
 - <<: *defaults
   level: 4
@@ -38,4 +38,4 @@
     title_ru: Олимпийский чемпион
     text_ru: Первый на пъедестале. Отличная работа!
     image: http://i.imgur.com/9oBtlqF.gif
-    border_color: "#ff4500"
+    border_color: "#c45812"
