--- a/priv/rules/slice_of_life.yml
+++ b/priv/rules/slice_of_life.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Обычный японский школьник
     text_ru: Довольно заурядно.
-    image: http://i.imgur.com/XPesMmd.png
+    image: /assets/achievements/anime/slice_of_life_1.png
     border_color: "#1a5369"
     topic_id: 222056
 
@@ -19,7 +19,7 @@
   metadata:
     title_ru: Чай с тортиком
     text_ru: Полностью погрязли в повседневных делах и симпатичных вещах.
-    image: http://i.imgur.com/kUfjaIt.png
+    image: /assets/achievements/anime/slice_of_life_2.png
     border_color: "#cb4842"
 
 - <<: *defaults
@@ -28,7 +28,7 @@
   metadata:
     title_ru: Дзэн
     text_ru: Предельная концентрация на будничной жизни. Когда вы перестали задумыватсья о прошлом, будущем и начали жить этим моментом?
-    image: http://i.imgur.com/o1OQB4k.png
+    image: /assets/achievements/anime/slice_of_life_3.png
     border_color: "#ddada5"
 
 - <<: *defaults
@@ -37,5 +37,5 @@
   metadata:
     title_ru: Прима ундина
     text_ru: Вы способны на чудо. Продлить незабываемые мгновения навечно для вас ничего не стоит.
-    image: https://i.yapx.ru/JDDR.gif
+    image: /assets/achievements/anime/slice_of_life_4.gif
     border_color: "#597fb9"
