--- a/priv/rules/sports.yml
+++ b/priv/rules/sports.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Первый раз на площадке
     text_ru: Стартовый свисток дан — пора в бой!
-    image: /assets/achievements/anime/sports_1.png
+    image: /assets/achievements/anime/sports_1.jpg
     border_color: "#975916"
     topic_id: 227429
 
@@ -19,7 +19,7 @@
   metadata:
     title_ru: С головой ушел в игру
     text_ru: Борьба в самом разгаре, пора войти в Зону.
-    image: /assets/achievements/anime/sports_2.png
+    image: /assets/achievements/anime/sports_2.jpg
     border_color: "#cc1111"
 
 - <<: *defaults
@@ -28,7 +28,7 @@
   metadata:
     title_ru: Добро пожаловать в Высшую лигу
     text_ru: Остался последний рывок до победы.
-    image: /assets/achievements/anime/sports_3.png
+    image: /assets/achievements/anime/sports_3.jpg
     border_color: "#82c54f"
 
 - <<: *defaults
