--- a/priv/rules/comedy.yml
+++ b/priv/rules/comedy.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: But then i lol'd
     text_ru: Неужели вам понравился японский юмор?
-    image: https://kawai.shikimori.org/system/user_images/original/50587/458876.jpg
+    image: /assets/achievements/anime/comedy_1.jpg
     border_color: "#5dbdd9"
     topic_id: 222035
 
@@ -26,7 +26,7 @@
   metadata:
     title_ru: Вечный смех
     text_ru: В психушке вам будут рады. Для вас открыты двери каждой психбольницы.
-    image: https://s-media-cache-ak0.pinimg.com/originals/1f/9a/ff/1f9affe62feff2a1b3ecc16ea9268469.gif
+    image: /assets/achievements/anime/comedy_3.jpg
     border_color: "#7f8f18"
 
 - <<: *defaults
