--- a/priv/rules/dementia_psychological.yml
+++ b/priv/rules/dementia_psychological.yml
@@ -10,7 +10,7 @@
   metadata:
     title_ru: Оно существует.
     text_ru: Вы открыли новый и странный мир. Продолжайте смотреть дальше.
-    image: http://s5.postimg.org/kzx4ud8bb/Psiho_3_2.jpg
+    image: /assets/achievements/anime/dementia_psychological_1.jpg
     border_color: "#c71585"
     topic_id: 227417
 
@@ -20,7 +20,7 @@
   metadata:
     title_ru: Это вообще реально?
     text_ru: Стало трудно отличить реальность и вымысел. Ориентация в пространстве нарушена.
-    image: http://s5.postimg.org/5i9mqo1uf/Psiho_7_00000.jpg
+    image: /assets/achievements/anime/dementia_psychological_2.jpg
     border_color: "#000000"
 
 - <<: *defaults
@@ -29,7 +29,7 @@
   metadata:
     title_ru: Вынос мозга.
     text_ru: "*fatal error."
-    image: http://i.imgur.com/IRo6Vbl.png
+    image: /assets/achievements/anime/dementia_psychological_3.png
     border_color: "#DC143C"
 
 - <<: *defaults
@@ -38,5 +38,5 @@
   metadata:
     title_ru: Вы видели слишком много.
     text_ru: Вы превзошли человечество и находитесь совсем на другом уровне.
-    image: http://i.imgur.com/iOrSsYl.gif
+    image: /assets/achievements/anime/dementia_psychological_4.gif
     border_color: "#20B2AA"
