--- a/priv/rules/drama.yml
+++ b/priv/rules/drama.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Скупая слеза
     text_ru: Я не плачу, мне что-то в глаз попало!
-    image: https://desu.shikimori.org/system/user_images/original/50587/459398.jpg
+    image: /assets/achievements/anime/drama_1.jpg
     border_color: "#f46c2d"
     topic_id: 222044
 
@@ -19,7 +19,7 @@
   metadata:
     title_ru: Эмпатия среднего уровня
     text_ru: Ну давай, расскажи, как ты плакал над Хатико
-    image: https://moe.shikimori.org/system/user_images/original/50587/459402.jpg
+    image: /assets/achievements/anime/drama_2.jpg
     border_color: "#031427"
 
 - <<: *defaults
@@ -28,7 +28,7 @@
   metadata:
     title_ru: Идеальная грусть
     text_ru: Вам стоит проявлять эмоции тогда, когда хотите. Незачем притворяться.
-    image: https://kawai.shikimori.org/system/user_images/original/50587/459426.jpg
+    image: /assets/achievements/anime/drama_3.jpg
     border_color: "#fefc9f"
 
 - <<: *defaults
@@ -37,5 +37,5 @@
   metadata:
     title_ru: Максимальная эмоциональная отзывчивость
     text_ru: Шрамы на сердце других становятся твоими.
-    image: http://25.media.tumblr.com/18bb07caa91763ef6c93e1f8f91dfc55/tumblr_mg8r7yi1i51qh8z5mo1_500.gif
+    image: /assets/achievements/anime/drama_4.gif
     border_color: "#606fde"
