--- a/priv/rules/military.yml
+++ b/priv/rules/military.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Новобранец
     text_ru: Зачислены на военную службу в очередной призыв.
-    image: http://i.imgur.com/MJI5DLT.png
+    image: /assets/achievements/anime/mecha_1.png
     border_color: "#635757"
     topic_id: 222037
 
@@ -19,7 +19,7 @@
   metadata:
     title_ru: Сержант
     text_ru: Толковый сержант необыкновенно полезен в армии, так ведь?
-    image: http://i.imgur.com/pJbZJxd.png
+    image: /assets/achievements/anime/mecha_2.png
     border_color: "#5f665a"
 
 - <<: *defaults
@@ -28,7 +28,7 @@
   metadata:
     title_ru: Майор
     text_ru: Забыли о человеческих чувствах ради долга.
-    image: http://i.imgur.com/NgRm8Nd.png
+    image: /assets/achievements/anime/mecha_3.png
     border_color: "#101011"
 
 - <<: *defaults
@@ -39,5 +39,5 @@
     text_ru: |-
       Не стоит связываться с кадровым офицером, прошедшим горячие точки.
       Жизни тысяч в руках одного.
-    image: https://shikimori.org/assets/achievements/anime/military_4.gif
+    image: /assets/achievements/anime/mecha_4.gif
     border_color: "#2a456e"
