--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Пилот Евы
     text_ru: ОЯШ, залезай в робота
-    image: http://68.media.tumblr.com/8cf1278fd22114a55608e9b09a5db1b4/tumblr_inline_nczxqyUFjI1rywm8k.png
+    image: /assets/achievements/anime/mecha_1.png
     border_color: "#1a153f"
     topic_id: 222036
 
@@ -19,7 +19,7 @@
   metadata:
     title_ru: Hassin!
     text_ru: Некогда непривычный костюм пилота теперь сидит как влитой. Вы — ас, впереди — бесконечные сражения.
-    image: http://i.imgur.com/djvEhwN.png
+    image: /assets/achievements/anime/mecha_2.png
     border_color: "#5d634d"
 
 - <<: *defaults
@@ -28,7 +28,7 @@
   metadata:
     title_ru: Ньютайп
     text_ru: Ore Wa Gundam / I am a mecha
-    image: http://i.imgur.com/XrJCBwN.png
+    image: /assets/achievements/anime/mecha_3.png
     border_color: "#66cdaa"
 
 - <<: *defaults
@@ -39,5 +39,5 @@
     text_ru: |-
       Мы снесем любую стену вставшую на пути! Если нет пути ,мы его проложим!
       Магма течет в наших венах, раскаляя сердца!
-    image: http://i.imgur.com/YTDucCf.gif
+    image: /assets/achievements/anime/mecha_4.gif
     border_color: "#da4968"
