--- a/priv/rules/sovietanime.yml
+++ b/priv/rules/sovietanime.yml
@@ -226,6 +226,6 @@
     text_ru: Из России с любовью <3
     title_en: MIWKA, VODKA, BALALAIKA
     text_en: From Russia with love <3
-    image: http://i.imgur.com/Edt5PrL.png
+    image: /assets/achievements/anime/sovietanime_1.png
     border_color: "#daa520"
     topic_id: 227427
