--- a/priv/rules/music.yml
+++ b/priv/rules/music.yml
@@ -9,6 +9,7 @@
   metadata:
     title_ru: Это не школьный клуб
     text_ru: Весьма посредственное отношение к музыке.
+    image: /assets/achievements/anime/music_1.png
     image: http://i.imgur.com/juINaek.png
     border_color: "#8fa9dc"
     topic_id: 222061
@@ -19,7 +20,7 @@
   metadata:
     title_ru: Это не вокалоид
     text_ru: Звуки сложились в песню.
-    image: https://i.yapx.ru/JPn2.jpg
+    image: /assets/achievements/anime/music_2.jpg
     border_color: "#4285b4"
 
 - <<: *defaults
@@ -28,7 +29,7 @@
   metadata:
     title_ru: Это не айдол
     text_ru: Вы ведь знаете, неважно что они поют, но они должны вкладывать в это своё сердце.
-    image: https://pp.userapi.com/c836632/v836632323/4248b/mWRXNkQqv5g.jpg
+    image: /assets/achievements/anime/music_3.jpg
     border_color: "#cd5c5c"
 
 - <<: *defaults
@@ -37,5 +38,5 @@
   metadata:
     title_ru: Это не продюсер
     text_ru: Кажется, вы знаток музыкальной индустрии. Ну и что теперь?.. Откроете своё агентство с инновациями и идолами?
-    image: https://i.yapx.ru/JPn6.gif
+    image: /assets/achievements/anime/music_4.gif
     border_color: "#4c514a"
