--- a/priv/rules/oniichan.yml
+++ b/priv/rules/oniichan.yml
@@ -33,6 +33,6 @@
   metadata:
     title_ru: Братик
     text_ru: Вы знаете, как счастливо жить с сестрёнкой вечно.
-    image: http://i.imgur.com/BQDF1Dq.png
+    image: /assets/achievements/anime/oniichan_1.png
     border_color: "#f0d698"
     topic_id: 227425
