--- a/priv/rules/police.yml
+++ b/priv/rules/police.yml
@@ -9,8 +9,7 @@
   metadata:
     title_ru: Народный дружинник
     text_ru: Любой может оказаться предателем. Нельзя терять бдительности.
-    image: https://i.yapx.ru/JP01.jpg
-    border_color: "#2F353B"
+    image: /assets/achievements/anime/police_1.jpg
     topic_id: 222038
 
 - <<: *defaults
@@ -19,7 +18,7 @@
   metadata:
     title_ru: Гражданин, пройдёмте
     text_ru: У каждого полицейского есть дело, которое не даёт ему покоя.
-    image: https://i.yapx.ru/JP2j.jpg
+    image: /assets/achievements/anime/police_2.jpg
     border_color: "#c34d0a"
 
 - <<: *defaults
@@ -28,7 +27,7 @@
   metadata:
     title_ru: Отдел особого назначения
     text_ru: О скольких способах противостояния преступникам вы осведомлены?
-    image: http://i.imgur.com/uTrpGUm.png
+    image: /assets/achievements/anime/police_3.png
     border_color: "#f4a900"
 
 - <<: *defaults
@@ -37,5 +36,5 @@
   metadata:
     title_ru: Вершина иерархии, высший начальствующий состав
     text_ru: Как вы себя чувствуете, забравшись так далеко?
-    image: https://i.yapx.ru/JP03.jpg
+    image: /assets/achievements/anime/police_4.jpg
     border_color: "#c7d0cc"
