--- a/priv/rules/scifi.yml
+++ b/priv/rules/scifi.yml
@@ -9,6 +9,7 @@
   metadata:
     title_ru: Давным-давно, в далекой-далекой галактике...
     text_ru: Как только ты сделаешь первый шаг по Тёмному Пути, ты уже не сможешь с него свернуть.
+    image: /assets/achievements/anime/scifi_1.jpg
     image: http://unrealitymag.com/wp-content/uploads/2014/04/dandy-title-500x250.jpg
     border_color: "#923a6c"
     topic_id: 222059
@@ -19,6 +20,7 @@
   metadata:
     title_ru: Изобретатель
     text_ru: Вероятно, вы способны сделать пригодным для использования даже то, что является кучей мусора в глазах других.
+    image: /assets/achievements/anime/scifi_2.png
     image: http://i.imgur.com/uhI7k2t.png?1
     border_color: "#256d7b"
 
@@ -28,6 +30,7 @@
   metadata:
     title_ru: Безумный ученый
     text_ru: В ваших руках рождается гармония между фантастикой, научными фактами и мистикой.
+    image: /assets/achievements/anime/scifi_3.jog
     image: https://pp.userapi.com/c836632/v836632323/42c47/Dc6XXlnzWCA.jpg
     border_color: "#423c63"
 
@@ -37,5 +40,5 @@
   metadata:
     title_ru: Великий Разум
     text_ru: Фантастика — это реальность. Всё, о чём вы подумали, осуществляется.
-    image: http://25.media.tumblr.com/tumblr_m880tlaKLy1qdfvslo1_500.gif
+    image: /assets/achievements/anime/scifi_4.gif
     border_color: "#2f353b"
